new blog article about computation

--- a/index.html
+++ b/index.html
@@ -63,11 +63,18 @@
 								<td><n_l>Economics, Music, Programming, Travel, Health</n_l></td>
 							</tr>
 							<tr valign="top" style="height:37px;">
+								<td><img src="images/blog.png" style="border: none; padding-right: 13px;"></td>
+								<td>
+									<a href="https://rfventer.github.io/about/" target="_blank">Custom blog</a><br>
+								</td>
+							</tr>
+							<tr valign="top" style="height:37px;">
 								<td><img src="images/profession.png" style="border: none; padding-right: 13px;"></td>
 								<td>
 									<a href="http://www.wealthtrainer.co" target="_blank">Wealth Trainer</a><br>
 									<a href="http://www.linkedin.com/in/riaanfrancoisventer" target="_blank">LinkedIn</a><br><br>
 								</td>
+							</tr>
 							<tr valign="top" style="height:37px;">
 								<td><img src="images/programming.png" style="border: none; padding-right: 13px;"></td>
 								<td>
