--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<tr valign="top" style="height:37px;">
 								<td><img src="images/blog.png" style="border: none; padding-right: 13px;"></td>
 								<td>
-									<a href="https://rfventer.github.io/about/" target="_blank">Custom blog</a><br>
+									<a href="https://rfventer.github.io/about/" target="_blank">Adventures in computation</a><br>
 								</td>
 							</tr>
 							<tr valign="top" style="height:37px;">
