hopin its fixed this time around

--- a/about/index.html
+++ b/about/index.html
@@ -152,7 +152,7 @@ I have a keen interest in how computers and how computation work in general and 
 <li>java</li>
 <li>web programming| javascrips, clojurescript, MEAN stack</li>
 </ul>
-<p>For info on where to contact me: <a href="https://rfventer.github.io/">RFVenter</a></p>
+<p>For info on where to contact me: <a href="http://www.rfv.io">RFVenter</a></p>
 <h1 id="learning-steps">Learning Steps</h1>
 <h2 id="certification">Certification</h2>
 <p><a href="https://teamtreehouse.com">Treehouse</a><br />
