--- a/links/index.html
+++ b/links/index.html
@@ -134,9 +134,9 @@
                 
 
 <h1 id="clojure">Clojure</h1>
-<p><a href="https://www.4clojure.com/">Clojure by example</a>
-<a href="http://clojuredocs.org/">Clojure Docs</a>
-<a href="http://hypirion.com/musings/understanding-persistent-vector-pt-1">Understanding Clojure's Persistent Vectors</a></p>
+<p><a href="https://www.4clojure.com/">Clojure by example</a><br />
+<a href="http://clojuredocs.org/">Clojure Docs</a><br />
+<a href="http://hypirion.com/musings/understanding-persistent-vector-pt-1">Understanding Clojure's Persistent Vectors</a>  </p>
 
                 <footer class="col-md-12">
                     <hr>
