--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 									<a href="https://twitter.com/RFVenter" target="_blank">Twitter</a><br>
 									<a href="http://www.fb.me/riaanfv" target="_blank">Facebook</a><br>
 									<a href="skype:riaan.francois.venter?call">Skype</a><br><br>
+									<a href="https://trello.com/rfventer">Trello</a><br><br>
 								</td>
 							</tr>
 							<tr valign="top" style="height:37px;">
