--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 								<td><img src="images/profession.png" style="border: none; padding-right: 13px;"></td>
 								<td>
 									<a href="http://www.wealthtrainer.co" target="_blank">Wealth Trainer</a><br>
-									<a href="http://www.linkedin.com/in/riaanfrancoisventer" target="_blank">LinkedIn</a><br><br>
+									<a href="http://www.linkedin.com/in/riaanfrancoisventer" target="_blank">LinkedIn</a><br>
+									<br>
 								</td>
 							</tr>
 							<tr valign="top" style="height:37px;">
@@ -81,7 +82,8 @@
 									<a href="https://www.upwork.com/fl/riaanventer" target="_blank">Upwork</a><br>
 									<a href="http://www.guru.com/freelancers/ryan-f-venter" target="_blank">Guru</a><br>
 									<a href="https://github.com/RFVenter" target="_blank">Github</a><br>
-									<a href="http://stackoverflow.com/users/6494274/rfv" target="_blank">Stack Overflow</a><br><br>
+									<a href="http://stackoverflow.com/users/6494274/rfv" target="_blank">Stack Overflow</a><br>
+									<br>
 								</td>
 							</tr>
 							<tr valign="top" style="height:37px;">
@@ -89,20 +91,23 @@
 								<td>
 									<a href="https://twitter.com/RFVenter" target="_blank">Twitter</a><br>
 									<a href="http://www.fb.me/riaanfv" target="_blank">Facebook</a><br>
-									<a href="skype:riaan.francois.venter?call">Skype</a><br><br>
-									<a href="https://trello.com/rfventer">Trello</a><br><br>
+									<a href="skype:riaan.francois.venter?call">Skype</a><br>
+									<a href="https://trello.com/rfventer">Trello</a><br>
+									<br>
 								</td>
 							</tr>
 							<tr valign="top" style="height:37px;">
 								<td><img src="images/alias.png" style="border: none; padding-right: 13px;"></td>
 								<td>
-									<a href="https://onename.com/rfventer" target="_blank">Onename</a><br><br>
+									<a href="https://onename.com/rfventer" target="_blank">Onename</a><br>
+									<br>
 								</td>
 							</tr>
 							<tr valign="top" style="height:37px;">
 								<td><img src="images/signatures.png" style="border: none; padding-right: 13px;"></td>
 								<td>
 									<a href="https://notbot.me/Selma61gQF4rhTk" target="_blank">NotBot</a>
+									<br>
 								</td>
 							</tr>
 						</table>
