added profile pic

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<a href="https://www.upwork.com/fl/riaanventer" target="_blank">Upwork</a><br>
 									<a href="http://www.guru.com/freelancers/ryan-f-venter" target="_blank">Guru</a><br>
 									<a href="https://github.com/RFVenter" target="_blank">Github</a><br>
-									<a href="http://stackoverflow.com/users/6494274/rfv" target="_blank">Stack Overflow</a><br>
+									<a href="http://stackoverflow.com/users/6494274/rfventer?tab=profile" target="_blank">Stack Overflow</a><br>
 									<br>
 								</td>
 							</tr>
