--- a/about/index.html
+++ b/about/index.html
@@ -157,7 +157,6 @@
             <div class="col-md-9" role="main">
                 
 
-<p><img alt="RFVenter" src="https://rfventer.github.io/images/profile_pic.jpg" /></p>
 <h1 id="about-me">About Me</h1>
 <p>I'm a <a href="http://www.wealthtrainer.co">financial person</a> and a computer person. I love to think outside of the box and to understand the bigger picture.
 I have a keen interest in how computers and how computation works in general and I enjoy understanding topics such as the <a href="https://en.wikipedia.org/wiki/P_versus_NP_problem">P vs NP</a>, <a href="https://en.wikipedia.org/wiki/Halting_problem">halting problem</a>, understanding different programming paradigms, knowing how our <a href="https://en.wikipedia.org/wiki/Turing_completeness">turing complete</a> machines work and more specifically the <a href="https://en.wikipedia.org/wiki/Von_Neumann_architecture">Von Neuman architecture</a>. Then, I strongly believe that although it is not necessary to be an expert in very low level programming, it is <em>imperative (pun)</em> that one at least know the basics of <a href="http://www.artofasm.com">assembler programming</a>. Lastly, how can any programmer understand the system they are working with and understand why it works the way it does without understanding how the modern day computer and mobile phone evolved into the complex machines that we have today. One needs to do some background research into the history of computers going back to the <a href="https://en.wikipedia.org/wiki/Difference_engine">difference machine</a> and then forwarding through the world wars, understanding the need for computers at that time, how they where designed, the physical realities of the designs and implementation of those actual machines, and how concepts and jargon, which we still use today evolved. How can you understand these concepts without understanding where they came from and what they actually mean? </p>
@@ -171,7 +170,8 @@ I have a keen interest in how computers and how computation works in general and
 <li>java</li>
 <li>web programming| javascrips, clojurescript, MEAN stack</li>
 </ul>
-<p>For info on where to contact me: <a href="http://www.rfv.io">RFVenter</a></p>
+<p>For info on where to contact me: <a href="http://www.rfv.io">RFVenter</a>
+<img alt="RFVenter" src="https://rfventer.github.io/images/profile_pic.jpg" /></p>
 <h1 id="learning-steps">Learning Steps</h1>
 <h2 id="certification">Certification</h2>
 <p><a href="https://teamtreehouse.com">Treehouse</a><br />
