--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 							<tr valign="top" style="height:37px;">
 								<td><img src="images/programming.png" style="border: none; padding-right: 13px;"></td>
 								<td>
+									<a href="https://talent.hubstaff.com/profiles/ryan-f-venter" target="_blank">Hubstaff</a><br>
 									<a href="https://www.upwork.com/fl/riaanventer" target="_blank">Upwork</a><br>
 									<a href="http://www.guru.com/freelancers/ryan-f-venter" target="_blank">Guru</a><br>
 									<a href="https://github.com/RFVenter" target="_blank">Github</a><br>
