--- a/index.html
+++ b/index.html
@@ -44,64 +44,58 @@
 				<tr valign="top">
 					<td align="left">
 						<img id="RFV_logo" src="" style="border: none;" onclick="logo_change();"/><br>
-						<img src="images/about.png" style="border: none;"/>
+						<h_1>ABOUT</h_1>
 					</td>
 				</tr>
 				<tr>
 					<td colspan="2">
 						<table border="0" cellspacing="0">
 							<tr valign="top" style="height:37px;">
-								<td style="width:199px"><img src="images/name.png" style="border: none; padding-right: 13px;"></td>
+								<td style="width:199px"><h_2>NAME</h_2></td>
 								<td><n_l>Riaan Francois Venter</n_l></td>
 							</tr>
 							<tr valign="top" style="height:37px;">
-								<td><img src="images/interests.png" style="border: none; padding-right: 13px;"></td>
+								<td><h_2>INTERESTS</h_2></td>
 								<td><n_l>Economics, Music, Programming, Travel, Health</n_l></td>
 							</tr>
 							<tr valign="top" style="height:37px;">
-								<td><img src="images/blog.png" style="border: none; padding-right: 13px;"></td>
+								<td><h_2>BLOG</h_2></td>
 								<td>
 									<a href="https://rfventer.github.io/about/">Adventures in computation</a><br>
 								</td>
 							</tr>
 							<tr valign="top" style="height:37px;">
-								<td><img src="images/profession.png" style="border: none; padding-right: 13px;"></td>
+								<td><h_2>WORK</h_2></td>
 								<td>
 									<a href="http://www.wealthtrainer.co" target="_blank">Wealth Trainer</a><br>
 									<a href="http://www.linkedin.com/in/riaanfrancoisventer" target="_blank">LinkedIn</a><br>
-									<br>
-								</td>
-							</tr>
-							<tr valign="top" style="height:37px;">
-								<td><img src="images/programming.png" style="border: none; padding-right: 13px;"></td>
-								<td>
 									<a href="https://talent.hubstaff.com/profiles/ryan-f-venter" target="_blank">Hubstaff</a><br>
 									<a href="https://www.upwork.com/fl/riaanventer" target="_blank">Upwork</a><br>
 									<a href="http://www.guru.com/freelancers/ryan-f-venter" target="_blank">Guru</a><br>
 									<a href="https://github.com/RFVenter" target="_blank">Github</a><br>
 									<a href="http://stackoverflow.com/users/6494274/rfventer?tab=profile" target="_blank">Stack Overflow</a><br>
-									<br>
-								</td>
-							</tr>
-							<tr valign="top" style="height:37px;">
-								<td><img src="images/personal.png" style="border: none; padding-right: 13px;"></td>
-								<td>
-									<a href="https://twitter.com/RFVenter" target="_blank">Twitter</a><br>
-									<a href="http://www.fb.me/riaanfv" target="_blank">Facebook</a><br>
-									<a href="skype:riaan.francois.venter?call">Skype</a><br>
 									<a href="https://trello.com/rfventer">Trello</a><br>
 									<br>
 								</td>
 							</tr>
 							<tr valign="top" style="height:37px;">
-								<td><img src="images/alias.png" style="border: none; padding-right: 13px;"></td>
+								<td><h_2>PERSONAL</h_2></td>
+								<td>
+									<a href="https://twitter.com/RFVenter" target="_blank">Twitter</a><br>
+									<a href="http://www.fb.me/riaanfv" target="_blank">Facebook</a><br>
+									<a href="skype:riaan.francois.venter?call">Skype</a><br>	
+									<br>
+								</td>
+							</tr>
+							<tr valign="top" style="height:37px;">
+								<td><h_2>ALIAS</h_2></td>
 								<td>
 									<a href="https://onename.com/rfventer" target="_blank">Onename</a><br>
 									<br>
 								</td>
 							</tr>
 							<tr valign="top" style="height:37px;">
-								<td><img src="images/signatures.png" style="border: none; padding-right: 13px;"></td>
+								<td><h_2>SIGNATURES</h_2></td>
 								<td>
 									<a href="https://notbot.me/Selma61gQF4rhTk" target="_blank">NotBot</a>
 									<br>
