--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<tr valign="top">
 					<td align="left">
 						<img id="RFV_logo" src="" style="border: none;" onclick="logo_change();"/><br>
-						<h_1>ABOUT</h_1>
+						<!--h_1>ABOUT</h_1-->
 					</td>
 				</tr>
 				<tr>
