--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>About me</title>
 	<link href="css/rfv.css" rel="stylesheet" type="text/css">
 	<script type="text/JavaScript">
-		var backgrounds = ["Altars.jpg", "b3e840bcd93913dcb64864b3b901ee8a.jpg", "back2.bmp", "Background2.jpg", "background-image-checkers-chequered-checkered-squares-seamless-tileable-ship-grey-bokara-grey-2364aq.png", "back_main.jpg", "BG02.jpg", "BGAlien.jpg", "BGDark.jpg", "BGDarkBlue.jpg", "BGLiquidMetal.jpg", "blackopal.gif", "britswrgold.jpg", "elecblueneb.jpg", "hex_grid_wallpaper_01__no_mask_by_adoomer-d3qx0iv.png", "p16of4lqkpovl1o2l1ecbbh814s9-details.jpg", "pattern06.png", "Red Background.bmp", "txwld004.jpg", "txwld008.jpg", "txwld034.jpg", "txwld045.jpg", "txwld061.jpg", "txwld064.jpg", "txwld100.jpg", "txwld101.jpg", "txwld102.jpg", "txwld116.jpg", "txwld117.jpg", "txwld122.jpg", "txwld125.jpg", "WaterColor.jpg"];
+		var backgrounds = ["b3e840bcd93913dcb64864b3b901ee8a.jpg", "back2.png", "Background2.jpg", "background-image-checkers-chequered-checkered-squares-seamless-tileable-ship-grey-bokara-grey-2364aq.png", "back_main.jpg", "BGAlien.jpg", "BGDark.jpg", "BGLiquidMetal.jpg", "blackopal.gif", "britswrgold.jpg", "hex_grid_wallpaper_01__no_mask_by_adoomer-d3qx0iv.png", "p16of4lqkpovl1o2l1ecbbh814s9-details.jpg", "pattern06.png", "Red Background.png", "txwld004.jpg", "txwld008.jpg", "txwld034.jpg", "txwld045.jpg", "txwld061.jpg", "txwld064.jpg", "txwld100.jpg", "txwld101.jpg", "txwld102.jpg", "txwld116.jpg", "txwld117.jpg", "txwld122.jpg", "txwld125.jpg", "WaterColor.jpg"];
 		var zzyp = ["0.png", "0120330_RiaanFV_bw.png", "0120514 RFV_big.png", "0120514 RFV_small.png", "0120518 RFV.png", "0120518 RFV_rounded.png", "0120518 RFV_small_rounded.png", "01210 bl0130303.bmp", "01210 wi.bmp", "01210 yxwra.bmp", "01210 yxwra0130303.png", "01210 yxwra2-.bmp", "01210 yxwra2.bmp", "0131208 image01.gif", "0131208 image02.gif", "01402 image.gif", "01402 image_3d.bmp", "01402 image_3d_rounded.bmp", "01402 image_3d_rounded_transparent.png", "01402 image_base.bmp", "01402 image_black.gif", "01402 image_large.gif", "01402 image_static.gif", "01403 0.png", "01403 image_40.png", "01403 image_80.gif", "01403 image_80.png", "01406 image.png", "01406 out.png", "7 image.bmp", "a1.png", "a2.png", "a3.png", "a5.png", "a6.png", "a7.png", "a8.png", "Aarde.GIF", "anim 01.gif", "anim 02.gif", "anim 03.gif", "anim 04.GIF", "anim 05.GIF", "anim 06.GIF", "anim colours.GIF", "anim intro.gif", "anim screen saver.gif", "anim static.GIF", "anim true.gif", "aniuv-invert-small.bmp", "aniuv-invert.bmp", "aniuv.bmp", "aniuv.ico", "aniuv5.bmp", "aniuvwhite.png", "bl_print.png", "black.gif", "boxes.png", "button.png", "circles.png", "Colours.bmp", "corporation 01.png", "corporation 02.png", "corporation 03.bmp", "corporation 04.bmp", "corporation 05.bmp", "Default.bmp", "DrZer0 line.gif", "DrZer0.gif", "earth.GIF", "fancy.bmp", "fuzy.png", "g21.png", "image 0140726.gif", "KLXIRI.png", "KORPORASX.png", "light background.png", "lines.bmp", "logo_full.png", "Meold.jpg", "Mouse Over.bmp", "neon.png", "PAA.bmp", "plain.bmp", "Reqruitement.bmp", "RFV 0111230.png", "RFV wealth advisor.bmp", "rfv.bmp", "RFV64.png", "RFV_normal.png", "riaan  francois  venter.png", "RiaanFV_bw.png", "RiaanFV.bmp", "RiaanFV.gif", "RiaanFV.png", "RiaanFV_big.bmp", "RiaanFV_big.gif", "RiaanFV_complete.bmp", "rounded.png", "RXILS.BMP", "RXILS.png", "Selected.bmp", "shadow.bmp", "sky.gif", "Supercompressed_AnimationWizard2.gif", "Transparent ZzypLogo.gif", "true.bmp", "true.gif", "true.png", "Wall.jpg", "white logo.gif", "white.gif", "YP.bmp", "yxwra 0130812.bmp", "yxwra 01308122.bmp", "yxwra 0130813.bmp", "yxwra 0130815.bmp", "yxwra 2.png", "yxwra.bmp", "yxwra.png", "yxwra_b.png", "z-yw.bmp", "ZRFV.bmp", "ZRFVD.bmp", "ZZ04.JPG", "ZZ08.JPG", "zzer0_dark.bmp", "zzer0_light.bmp", "zzer0_bw_dark.bmp", "zzer0_bw_light.bmp", "zzer0 icon.png", "zzer0.gif", "zzer0.png", "zzer0_rainbow.gif", "zzer0_rainbow_2.gif", "zzyip.bmp", "zzyip.png", "zzyip1.bmp", "zzyip2.bmp", "zzyip3.bmp", "Zzyp 02.GIF", "Zzyp Background.JPG", "Zzyp Basic - BW.bmp", "Zzyp Basic - Idea 01.bmp", "Zzyp Basic - Idea 02.bmp", "Zzyp Basic - Idea 03.bmp", "Zzyp Basic - Idea 04.bmp", "Zzyp Basic - Idea 05.bmp", "Zzyp Basic - Idea 06.bmp", "Zzyp Basic - Idea 07.bmp", "Zzyp Basic - Idea 08.bmp", "Zzyp Basic INverse.bmp", "Zzyp Basic.bmp", "Zzyp blue.GIF", "Zzyp Buttons.bmp", "Zzyp BW-Large.bmp", "Zzyp Health.bmp", "Zzyp Logo Day.png", "Zzyp Logo Night.png", "Zzyp Music Sound.bmp", "Zzyp Riaan Francois Venter.bmp", "Zzyp S 01.GIF", "Zzyp S 02.GIF", "Zzyp Streched Up.JPG", "ZZYP txikin.bmp", "Zzyp Zzyp 01.bmp", "Zzyp Zzyp 02.bmp", "Zzyp Zzyp 03.bmp", "Zzyp Zzyp 04.bmp", "Zzyp Zzyp 05.bmp", "Zzyp Zzyp 06.bmp", "Zzyp Zzyp 07.bmp", "Zzyp Zzyp 08.bmp", "Zzyp Zzyp Logo 02.GIF", "Zzyp Zzyp Logo.GIF", "Zzyp.gif", "Zzyp.ico", "Zzyp.jpg", "ZZYP2.bmp", "ZZYP3.bmp", "ZZYP5.bmp", "zzyp6.bmp", "ZzypAnim.GIF", "ZzypBox.gif", "ZzypFlash-.gif", "ZzypIntro.gif", "ZzypLogo.bmp", "ZzypSignal.gif"];
 		var logos = ['blue', 'red', 'yellow', 'green', 'grey', 'grey_79', 'grey_101'];
 
@@ -39,12 +39,12 @@
 			margin-left: auto;
 			margin-right: auto;
 			padding: 13px;
-			background: rgba(0, 0, 0, 0.5);
-			cellspacing="0">
+			background: rgba(0, 0, 0, 0.7);
+			cellspacing="0"
+			width="50%">
 				<tr valign="top">
 					<td align="left">
 						<img id="RFV_logo" src="" style="border: none;" onclick="logo_change();"/><br>
-						<!--h_1>ABOUT</h_1-->
 					</td>
 				</tr>
 				<tr>
@@ -55,13 +55,30 @@
 								<td><n_l>Riaan Francois Venter</n_l></td>
 							</tr>
 							<tr valign="top" style="height:37px;">
-								<td><h_2>INTERESTS</h_2></td>
-								<td><n_l>Economics, Music, Programming, Travel, Health</n_l></td>
+								<td><h_2>ABOUT</h_2></td>
+								<td><rn_l>
+								<p>
+								I stand at the crossroad of Finance and Computation, doing few distinct tasks, very well. These two fields blend well together and they are my passion. In the past 13 years, I have written a number of software solutions for leading companies and I have also managed substantially large portfolios of wealthy investors in the Middle East and London.</p>
+								<p>
+								I am a fee based <a href="http://www.wealthtrainer.co">Financial Advisor</a> with a strong background in portfolio design and international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates.</p>
+								<p>
+								I am a <a href="programming.html">Software Developer</a> focusing on: numerical computation, data extraction, database implementation, data analysis. I have several certificates in Python and I am currently studying Clojure and the Java virtual machine.</p>
+								<p>
+								By combining these two fields I am actively involved in the FinTech industry focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a paid blogger, as well as part of a consortium exploring business opportunities in this space.</p>
+								<p>
+								You may notice from my website, I don't use templates. Everything that I do is uniquely crafted and tailored specifically for each client and each task.<br>
+								My problem solving skills are out-of-the-box, and my life motto is to <b_b>add value in whatever I do.</b_b></p>
+								<p>
+								Apart from work: I am a family man. I do exercise daily and eat very healthily. I do not drink alcohol or smoke. I do not watch TV or read news on the Internet that has no relevance to me. I am a focused machine.</p>
+								<p>
+								<b_l>Key personality traits:</b_l> <b_g>enthusiastic, intelligent, productive, proficient, professional</b_g></p>
+								<p>
+								Allow me to show you how I can help you. Thank you</p></td>
 							</tr>
 							<tr valign="top" style="height:37px;">
-								<td><h_2>BLOG</h_2></td>
+								<td><h_2>EMAIL</h_2></td>
 								<td>
-									<a href="https://rfventer.github.io/about/">Adventures in computation</a><br>
+									<a href="mailto:msg@rfv.io">msg@rfv.io</a><br>
 								</td>
 							</tr>
 							<tr valign="top" style="height:37px;">
@@ -73,8 +90,8 @@
 									<a href="http://www.guru.com/freelancers/ryan-f-venter" target="_blank">Guru</a><br>
 									<a href="https://github.com/RFVenter" target="_blank">Github</a><br>
 									<a href="http://stackoverflow.com/users/6494274/rfventer?tab=profile" target="_blank">Stack Overflow</a><br>
-									<a href="http://www.wealthtrainer.co" target="_blank">Wealth Trainer</a><br>
 									<a href="https://trello.com/rfventer">Trello</a><br>
+									<a href="https://notbot.me/Selma61gQF4rhTk" target="_blank">NotBot</a>
 									<br>
 								</td>
 							</tr>
@@ -83,23 +100,16 @@
 								<td>
 									<a href="https://twitter.com/RFVenter" target="_blank">Twitter</a><br>
 									<a href="http://www.fb.me/riaanfv" target="_blank">Facebook</a><br>
-									<a href="skype:riaan.francois.venter?call">Skype</a><br>	
-									<br>
+									<a href="skype:riaan.francois.venter?call">Skype</a>
 								</td>
 							</tr>
 							<tr valign="top" style="height:37px;">
-								<td><h_2>ALIAS</h_2></td>
-								<td>
-									<a href="https://onename.com/rfventer" target="_blank">Onename</a><br>
-									<br>
-								</td>
+								<td><h_2>TIME ZONE</h_2></td>
+								<td><rn_l>Perth UTC + 8</rn_l></td>
 							</tr>
 							<tr valign="top" style="height:37px;">
-								<td><h_2>SIGNATURES</h_2></td>
-								<td>
-									<a href="https://notbot.me/Selma61gQF4rhTk" target="_blank">NotBot</a>
-									<br>
-								</td>
+								<td><h_2>LOCATION</h_2></td>
+								<td><rn_l>Australasia, depending on my clients</rn_l></td>
 							</tr>
 						</table>
 					</td>
