--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<td><h_2>ABOUT</h_2></td>
 								<td><rn_l>
 								<p>
-								I stand at the crossroad of Finance and Computation, doing few distinct tasks, very well. These two fields blend well together and they are my passion. In the past 13 years, I have written a number of software solutions for leading companies and I have also managed substantially large portfolios of wealthy investors in the Middle East and London.</p>
+								I stand at the crossroad of Finance and Computation, doing few distinct tasks, very well. These two fields blend well together and they are my passion. In the past 13 years, I have written a number of software solutions for leading companies and I have also managed substantially large portfolios for wealthy investors in the Middle East and London.</p>
 								<p>
 								I am a fee based <a href="http://www.wealthtrainer.co">Financial Advisor</a> with a strong background in portfolio design and international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates.</p>
 								<p>
