--- a/programming.html
+++ b/programming.html
@@ -5,23 +5,21 @@
 	<title>About me</title>
 	<link href="css/rfv.css" rel="stylesheet" type="text/css">
 	<script type="text/JavaScript">
-		var zzyp = ["0.png", "0120330_RiaanFV_bw.png", "0120514 RFV_big.png", "0120514 RFV_small.png", "0120518 RFV.png", "0120518 RFV_rounded.png", "0120518 RFV_small_rounded.png", "01210 bl0130303.bmp", "01210 wi.bmp", "01210 yxwra.bmp", "01210 yxwra0130303.png", "01210 yxwra2-.bmp", "01210 yxwra2.bmp", "0131208 image01.gif", "0131208 image02.gif", "01402 image.gif", "01402 image_3d.bmp", "01402 image_3d_rounded.bmp", "01402 image_3d_rounded_transparent.png", "01402 image_base.bmp", "01402 image_black.gif", "01402 image_large.gif", "01402 image_static.gif", "01403 0.png", "01403 image_40.png", "01403 image_80.gif", "01403 image_80.png", "01406 image.png", "01406 out.png", "7 image.bmp", "a1.png", "a2.png", "a3.png", "a5.png", "a6.png", "a7.png", "a8.png", "Aarde.GIF", "anim 01.gif", "anim 02.gif", "anim 03.gif", "anim 04.GIF", "anim 05.GIF", "anim 06.GIF", "anim colours.GIF", "anim intro.gif", "anim screen saver.gif", "anim static.GIF", "anim true.gif", "aniuv-invert-small.bmp", "aniuv-invert.bmp", "aniuv.bmp", "aniuv.ico", "aniuv5.bmp", "aniuvwhite.png", "bl_print.png", "black.gif", "boxes.png", "button.png", "circles.png", "Colours.bmp", "corporation 01.png", "corporation 02.png", "corporation 03.bmp", "corporation 04.bmp", "corporation 05.bmp", "Default.bmp", "DrZer0 line.gif", "DrZer0.gif", "earth.GIF", "fancy.bmp", "fuzy.png", "g21.png", "image 0140726.gif", "KLXIRI.png", "KORPORASX.png", "light background.png", "lines.bmp", "logo_full.png", "Meold.jpg", "Mouse Over.bmp", "neon.png", "PAA.bmp", "plain.bmp", "Reqruitement.bmp", "RFV 0111230.png", "RFV wealth advisor.bmp", "rfv.bmp", "RFV64.png", "RFV_normal.png", "riaan  francois  venter.png", "RiaanFV_bw.png", "RiaanFV.bmp", "RiaanFV.gif", "RiaanFV.png", "RiaanFV_big.bmp", "RiaanFV_big.gif", "RiaanFV_complete.bmp", "rounded.png", "RXILS.BMP", "RXILS.png", "Selected.bmp", "shadow.bmp", "sky.gif", "Supercompressed_AnimationWizard2.gif", "Transparent ZzypLogo.gif", "true.bmp", "true.gif", "true.png", "Wall.jpg", "white logo.gif", "white.gif", "YP.bmp", "yxwra 0130812.bmp", "yxwra 01308122.bmp", "yxwra 0130813.bmp", "yxwra 0130815.bmp", "yxwra 2.png", "yxwra.bmp", "yxwra.png", "yxwra_b.png", "z-yw.bmp", "ZRFV.bmp", "ZRFVD.bmp", "ZZ04.JPG", "ZZ08.JPG", "zzer0_dark.bmp", "zzer0_light.bmp", "zzer0_bw_dark.bmp", "zzer0_bw_light.bmp", "zzer0 icon.png", "zzer0.gif", "zzer0.png", "zzer0_rainbow.gif", "zzer0_rainbow_2.gif", "zzyip.bmp", "zzyip.png", "zzyip1.bmp", "zzyip2.bmp", "zzyip3.bmp", "Zzyp 02.GIF", "Zzyp Background.JPG", "Zzyp Basic - BW.bmp", "Zzyp Basic - Idea 01.bmp", "Zzyp Basic - Idea 02.bmp", "Zzyp Basic - Idea 03.bmp", "Zzyp Basic - Idea 04.bmp", "Zzyp Basic - Idea 05.bmp", "Zzyp Basic - Idea 06.bmp", "Zzyp Basic - Idea 07.bmp", "Zzyp Basic - Idea 08.bmp", "Zzyp Basic INverse.bmp", "Zzyp Basic.bmp", "Zzyp blue.GIF", "Zzyp Buttons.bmp", "Zzyp BW-Large.bmp", "Zzyp Health.bmp", "Zzyp Logo Day.png", "Zzyp Logo Night.png", "Zzyp Music Sound.bmp", "Zzyp Riaan Francois Venter.bmp", "Zzyp S 01.GIF", "Zzyp S 02.GIF", "Zzyp Streched Up.JPG", "ZZYP txikin.bmp", "Zzyp Zzyp 01.bmp", "Zzyp Zzyp 02.bmp", "Zzyp Zzyp 03.bmp", "Zzyp Zzyp 04.bmp", "Zzyp Zzyp 05.bmp", "Zzyp Zzyp 06.bmp", "Zzyp Zzyp 07.bmp", "Zzyp Zzyp 08.bmp", "Zzyp Zzyp Logo 02.GIF", "Zzyp Zzyp Logo.GIF", "Zzyp.gif", "Zzyp.ico", "Zzyp.jpg", "ZZYP2.bmp", "ZZYP3.bmp", "ZZYP5.bmp", "zzyp6.bmp", "ZzypAnim.GIF", "ZzypBox.gif", "ZzypFlash-.gif", "ZzypIntro.gif", "ZzypLogo.bmp", "ZzypSignal.gif"];
+		var backgrounds = ["b3e840bcd93913dcb64864b3b901ee8a.jpg", "back2.png", "Background2.jpg", "background-image-checkers-chequered-checkered-squares-seamless-tileable-ship-grey-bokara-grey-2364aq.png", "back_main.jpg", "BGAlien.jpg", "BGDark.jpg", "BGLiquidMetal.jpg", "blackopal.gif", "britswrgold.jpg", "hex_grid_wallpaper_01__no_mask_by_adoomer-d3qx0iv.png", "p16of4lqkpovl1o2l1ecbbh814s9-details.jpg", "pattern06.png", "Red Background.png", "txwld004.jpg", "txwld008.jpg", "txwld034.jpg", "txwld045.jpg", "txwld061.jpg", "txwld064.jpg", "txwld100.jpg", "txwld101.jpg", "txwld102.jpg", "txwld116.jpg", "txwld117.jpg", "txwld122.jpg", "txwld125.jpg", "WaterColor.jpg"];
 		var logos = ['blue', 'red', 'yellow', 'green', 'grey', 'grey_79', 'grey_101'];
 
 		function starter()	{
 			var logo_name = logos[Math.floor(Math.random() * logos.length)];
 			var logo_image = document.getElementById('RFV_logo');
-			logo_image.src = 'images/RFV_' + logo_name + '.png';		
+			logo_image.src = 'images/RFV_' + logo_name + '.png';
+			var background_name = backgrounds[Math.floor(Math.random() * backgrounds.length)];
+			var body_background = document.getElementById('body_background');
+			body_background.background = 'images/backgrounds/' + background_name;		
 		}
 
-		function logo_change()	{
-			var zzyp_selected = zzyp[Math.floor(Math.random() * zzyp.length)];
-			var logo_image = document.getElementById('RFV_logo');
-			logo_image.src = 'images/ZZYP/' + zzyp_selected;
-		}
 	</script>
 </head>
-<body id="body_background" background="" bgcolor="black" onload="starter();">
+<body id="body_background" onload="starter();">
 	<div id="tableContainer-1">
 		<div id="tableContainer-2">
 			<table style="
@@ -34,7 +32,7 @@
 			width="70%">
 				<tr valign="top">
 					<td align="left">
-						<img id="RFV_logo" src="" style="border: none;" onclick="logo_change();"/><br>
+						<a href="http://www.rfv.io"><img id="RFV_logo" src="" style="border: none;" /></a><br>
 						<h_1>PROGRAMMING</h_1>
 						<rn_d>
 						<p>
@@ -44,8 +42,9 @@
 						<p>
 						I enjoy working on projects with a team that cares about creating quality, maintainable code. But, if a team is not as good as they should be, I do the brave thing and make practical recommendations. That's why clients love me, because I do whatever is necessary for a project to succeed.</p>
 						<p>
-						I have both practical (technical) and theory (insight). I have a substantial knowledge of computation theory, computation complexity and the history and evolution of computers as we know it, and where the computing industry is heading into the future.</p>
-						</rn_d>
+						I have both practical (technical) and theory (insight). I have a substantial knowledge of computation theory, computation complexity and the history and evolution of computers as we know it, and where the computing industry is heading into the future.</p></rn_d>
+						<p>
+						<a href="https://drive.google.com/open?id=0BzkLEtCwUeaANENycGd0Skx1eEE">Profile (Resume/CV)</a></p>
 						<h_2>KEY TECHNOLOGIES</h_2>
 						<p>
 						<b_r>python 3.5/2.7, cython, cv2, pil, openpyxl, wxpython, tkinter, numpy, scipy, pandas, matplotlib, ipython, sql, sqlalchemy, mysql, postgresql, sqlite, json, json-rpc, xml, excel, csv, regular expression, pdftotext, git, github, heroko, amazon, fintech, bitcoin, ethereum, solidity, linux, windows, macos</b_r></p>
@@ -72,7 +71,6 @@
 						<img src="images/logos/linux.png" style="border: none;" width="191">
 						<img src="images/logos/windows.png" style="border: none;" width="191">
 						<img src="images/logos/macos.png" style="border: none;" width="191">
-
 					</td>
 				</tr>
 			</table>
