fixed front page

--- a/index.html
+++ b/index.html
@@ -55,16 +55,24 @@
 								<td><n_l>Riaan Francois Venter</n_l></td>
 							</tr>
 							<tr valign="top" style="height:37px;">
+								<td><h_2>CONTACT</h_2></td>
+								<td>
+									<a href="mailto:msg@rfv.io">msg@rfv.io</a><br>
+									<a href="skype:riaan.francois.venter?call">Skype</a>
+								</td>
+							</tr>
+							<tr valign="top" style="height:37px;">
 								<td><h_2>ABOUT</h_2></td>
 								<td><rn_l>
 								<p>
 								I stand at the crossroad of Finance and Computation, doing few distinct tasks, very well. These two fields blend well together and they are my passion. In the past 13 years, I have written a number of software solutions for leading companies and I have also managed substantially large portfolios for wealthy investors in the Middle East and London.</p>
 								<p>
-								I am a fee based <a href="http://www.wealthtrainer.co">Financial Advisor</a> with a strong background in portfolio design and international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates.</p>
+								I am a fee based Financial Advisor with a strong background in portfolio design and international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates.</p>
 								<p>
-								I am a <a href="programming.html">Software Developer</a> focusing on: numerical computation, data extraction, database implementation, data analysis. I have several certificates in Python and I am currently studying Clojure and the Java virtual machine.</p>
+								I am a Software Developer focusing on: numerical computation, data extraction, database implementation, data analysis. I have several certificates in Python and I am currently studying Clojure and the Java virtual machine.</p>
+								
 								<p>
-								By combining these two fields I am actively involved in the FinTech industry focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a paid blogger, as well as part of a consortium exploring business opportunities in this space.</p>
+								By combining these two fields I am also actively involved in the FinTech industry focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a paid blogger, as well as part of a consortium exploring business opportunities in this space.</p>
 								<p>
 								You may notice from my website, I don't use templates. Everything that I do is uniquely crafted and tailored specifically for each client and each task.<br>
 								My problem solving skills are out-of-the-box, and my life motto is to <b_b>add value in whatever I do.</b_b></p>
@@ -73,16 +81,12 @@
 								<p>
 								<b_l>Key personality traits:</b_l> <b_g>enthusiastic, intelligent, productive, proficient, professional</b_g></p>
 								<p>
-								Allow me to show you how I can help you. Thank you</p></td>
+								Allow me to show you how I can help you.<br></p>
+								<p>
+								<a class="button" href="http://www.wealthtrainer.co">Financial Advice</a> <a class="button" href="<a href="programming.html">Software Development</a></p></td>
 							</tr>
 							<tr valign="top" style="height:37px;">
-								<td><h_2>EMAIL</h_2></td>
-								<td>
-									<a href="mailto:msg@rfv.io">msg@rfv.io</a><br>
-								</td>
-							</tr>
-							<tr valign="top" style="height:37px;">
-								<td><h_2>WORK</h_2></td>
+								<td><h_2>PROFILES</h_2></td>
 								<td>
 									<a href="http://www.linkedin.com/in/riaanfrancoisventer" target="_blank">LinkedIn</a><br>
 									<a href="https://talent.hubstaff.com/profiles/ryan-f-venter" target="_blank">Hubstaff</a><br>
@@ -91,16 +95,10 @@
 									<a href="https://github.com/RFVenter" target="_blank">Github</a><br>
 									<a href="http://stackoverflow.com/users/6494274/rfventer?tab=profile" target="_blank">Stack Overflow</a><br>
 									<a href="https://trello.com/rfventer">Trello</a><br>
-									<a href="https://notbot.me/Selma61gQF4rhTk" target="_blank">NotBot</a>
-									<br>
-								</td>
-							</tr>
-							<tr valign="top" style="height:37px;">
-								<td><h_2>PERSONAL</h_2></td>
-								<td>
+									<a href="https://notbot.me/Selma61gQF4rhTk" target="_blank">NotBot</a><br>
 									<a href="https://twitter.com/RFVenter" target="_blank">Twitter</a><br>
 									<a href="http://www.fb.me/riaanfv" target="_blank">Facebook</a><br>
-									<a href="skype:riaan.francois.venter?call">Skype</a>
+									
 								</td>
 							</tr>
 							<tr valign="top" style="height:37px;">
