--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
 								<p>
 								I stand at the crossroad of Finance and Computation, doing few distinct tasks, very well. These two fields blend well together and they are my passion. In the past 13 years, I have written a number of software solutions for leading companies and I have also managed substantially large portfolios for wealthy investors in the Middle East and London.</p>
 								<p>
-								I am a fee based Financial Advisor with a strong background in portfolio design and international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates.</p>
-								<p>
 								I am a Software Developer focusing on: numerical computation, data extraction, database implementation, data analysis. I have several certificates in Python and I am currently studying Clojure and the Java virtual machine.</p>
-								
+								<p>
+								I am a fee based Financial Advisor with a strong background in portfolio design and international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates.</p>
 								<p>
 								By combining these two fields I am also actively involved in the FinTech industry focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a paid blogger, as well as part of a consortium exploring business opportunities in this space.</p>
 								<p>
@@ -83,7 +82,7 @@
 								<p>
 								Allow me to show you how I can help you.<br></p>
 								<p>
-								<a class="button" href="http://www.wealthtrainer.co">Financial Advice</a> <a class="button" href="<a href="programming.html">Software Development</a></p></td>
+								<a class="button" href="programming.html">Software Development</a> <a class="button" href="http://www.wealthtrainer.co">Financial Advice</a> <a class="button" href="crowdsourcing.html">Crowdsourcing</a></p></td>
 							</tr>
 							<tr valign="top" style="height:37px;">
 								<td><h_2>PROFILES</h_2></td>
