--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 								<p>
 								<b_l>Key personality traits:</b_l> <b_g>enthusiastic, intelligent, productive, proficient, professional</b_g></p>
 								<p>
-								Allow me to show you how I can help you.<br></p>
+								Allow me to show you how I can help you.</p>
 								<p>
-								<a class="button" href="programming.html">Software Development</a> <a class="button" href="http://www.wealthtrainer.co">Financial Advice</a> <a class="button" href="crowdsourcing.html">Crowdsourcing</a></p></td>
+								 <a class="button" href="programming.html">Software Development</a> <a class="button" href="http://www.wealthtrainer.co">Financial Advice</a> <a class="button" href="crowdsourcing.html">Crowdsourcing</a></p></td>
 							</tr>
 							<tr valign="top" style="height:37px;">
 								<td><h_2>PROFILES</h_2></td>
