--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								<p>
 								Apart from work: I am a family man. I do exercise daily and eat very healthily. I do not drink alcohol or smoke. I do not watch TV or read news on the Internet that has no relevance to me. I am a focused machine.</p>
 								<p>
-								<b_l>Key personality traits:</b_l> <b_g>enthusiastic, intelligent, productive, proficient, professional</b_g></p>
+								<b_l>Key personality traits:</b_l> <b_y>enthusiastic, intelligent, productive, proficient, professional</b_y></p>
 								<p>
 								Allow me to show you how I can help you.</p>
 								<p>
