--- a/icofund.html
+++ b/icofund.html
@@ -70,7 +70,7 @@
 							<table>
 								<tr><td>Exit fee</td><td>3% (one time)</td></tr>
 								<tr><td>Administration fee</td><td>3% (per anum)</td></tr>
-								<tr><td>Performance fee</td><td>30% on any performance above 30% pa (if the fund performed at a growth rate of 50% pa then we will change 30% * (50 - 30) = 6%)</td></tr>
+								<tr><td>Performance fee</td><td>30% on any performance above 30% pa (if the fund performed at a growth rate of 50% pa then we will charge 30% * (50% - 30%) = 6%)</td></tr>
 							</table></p>
 
 							<b_g>Legal Disclaimer</b_g>
