changed disclaimer wording

--- a/icofund.html
+++ b/icofund.html
@@ -75,11 +75,8 @@
 
 							<b_g>Legal Disclaimer</b_g>
 							<p>
-							All investments carry an element of risk and by investing in the ICO Fund you accept these risks. We will not be held responsible for any loss due to market movements. Buying or selling units may take up to 24 hours to process. The profit accumulation is valid for a 12 month period after which may sell to pay for ongoing research and expenses associated with running the fund. We publish daily values of the fund and the actual holdings of the fund at the end of the month (We do this so that others can't simply copy us).</p>
-
-
-						</rn_d>
-						
+							All investments carry an element of risk and by investing in the ICOFund you accept these risks. We will not be held responsible for any loss due to market movements or for any other reason out of our control. Buying or selling units may take up to 24 hours to process. The profit accumulation is valid for a 12 month period after which ICOFund may sell profit units to pay for ongoing research and expenses associated with running the fund. We publish daily values of the fund and the holdings data at the end of each calendar month (so that others can't simply copy us).</p>
+						</rn_d>	
 					</td>
 				</tr>
 			</table>
