--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<table border="0" cellspacing="0">
 							<tr valign="top" style="height:37px;">
 								<td style="width:199px"><h_2>NAME</h_2></td>
-								<td><n_l>Riaan Francois Venter</n_l></td>
+								<td><n_l>Ryan Francois Venter</n_l></td>
 							</tr>
 							<tr valign="top" style="height:37px;">
 								<td><h_2>CONTACT</h_2></td>
