spelling mistakes fix

--- a/icofund.html
+++ b/icofund.html
@@ -25,8 +25,7 @@
 						<b_g>Blockchain Investment Fund Objectives</b_g><br>
 						<rn_d>
 							<p>
-							The recent wave of blockchain crowd-funding initiatives have quickly set the stage for the best investment opportunities in the last few years.<br>
-							Some IPOs and ICOs have raised tremendous amounts of money from investors who are not well educated in the art of investing.</p>
+							The recent wave of blockchain crowd-funding initiatives have quickly set the stage for the best investment opportunities in the last few years.	Some IPOs and ICOs have raised tremendous amounts of money from investors who are not well educated in the art of investing.</p>
 							<p>
 							It is for this reason that I set up a team of professional investors from my network and have created the blockchain <rb_g>ICOFund</rb_g>. I am a UK qualified professional investor with over 13 years of international experience in the investment world. Here, I have created a simple solution to diversify in the Bitcoin and Ethereum startup space. The objective of this fund is not so much to support the ideologies and dreams of these startup organizations but to capitalize on what the market says are good investment opportunities. The objective is to maximize returns in two ways: buying tokens whose market value will increase, and selling them before the market turns; and to hold onto tokens which provide some sort of profit share or dividend.</p>
 							<p>
@@ -46,7 +45,7 @@
 
 							<b_g>To buy ICOFund token units</b_g>
 							<p>
-							The fund work the same as Mutual Fund or Unit Trust.<br>
+							The fund works in the same as a Mutual Fund or Unit Trust.<br>
 							Investors deposits Ether into address <rb_g>0xA813e13d85D61c36D2fEc4621Ce85B5DDE9e83DF</rb_g> (minimum 1 ETH).<br>
 							We convert Ether into units (shares) of the fund and purchase equal amounts of ICO tokens and other stocks according to the fund allocation that makes up the fund.<br>
 							We create new ICOFund tokens according to your share in the fund and allocate them to your Ethereum address.</p>
