--- a/icofund.html
+++ b/icofund.html
@@ -25,11 +25,11 @@
 						<b_g>Blockchain Investment Fund Objectives</b_g><br>
 						<rn_d>
 							<p>
-							The recent wave of blockchain crowd-funding initiatives have quickly set the stage for the best investment opportunities in the last few years.	Some IPOs and ICOs have raised tremendous amounts of money from investors who are not well educated in the art of investing.</p>
+							The recent wave of blockchain crowd-funding initiatives have quickly set the stage for the best investment opportunities in the last few years.	Some IPOs and ICOs have raised tremendous amounts of money from investors who are not well educated in the art of investing though.</p>
 							<p>
-							It is for this reason that I set up a team of professional investors from my network and have created the blockchain <rb_g>ICOFund</rb_g>. I am a UK qualified professional investor with over 13 years of international experience in the investment world. Here, I have created a simple solution to diversify in the Bitcoin and Ethereum startup space. The objective of this fund is not so much to support the ideologies and dreams of these startup organizations but to capitalize on what the market says are good investment opportunities. The objective is to maximize returns in two ways: buying tokens whose market value will increase, and selling them before the market turns; and to hold onto tokens which provide some sort of profit share or dividend.</p>
+							It is for this reason that we set up a team of professional investors and have created the ETH denominated blockchain <rb_g>ICOFund</rb_g>. I myself am a UK qualified professional investor with over 13 years of international experience in the investment world. Here is a easy solution to diversified investmen in the Bitcoin and Ethereum startup space. The objective of this fund is not so much to support the ideologies and dreams of these startup organizations but to capitalize on what the market says are good investment opportunities. The objective is to maximize returns in two ways: buying tokens whose market value will increase, and selling them before the market turns; and to hold onto tokens which provide some sort of profit share or dividend.</p>
 							<p>
-							The keys to low risk investing are <rb_g>research and experience</rb_g>. Due diligence, proper analysis of what's actually on offer, terms and conditions, and the actual legal structure of these initiative. These are but a few very important things to consider, and it seems like very few in the cryptocurrency community are taking these factors into consideration. Instead it seem that folks are willing to take bets on these because they view them as sound investments and because of past performance alone.</p>
+							The keys to low risk investing are <rb_g>research and experience</rb_g>. Due diligence, proper analysis of what's actually on offer, terms and conditions, and the actual legal structure of these initiative. These are but a few very important things to consider, and it seems like very few in the cryptocurrency community are taking these factors into consideration. Instead it seem that folks are willing to take bets on these because they view them as sound investments simply because of past performance alone.</p>
 
 							<b_g>Fund Data</b_g>
 							<p>
@@ -46,15 +46,15 @@
 							<b_g>To buy ICOFund token units</b_g>
 							<p>
 							The fund works in the same as a Mutual Fund or Unit Trust.<br>
-							Investors deposits Ether into address <rb_g>0xA813e13d85D61c36D2fEc4621Ce85B5DDE9e83DF</rb_g> (minimum 1 ETH).<br>
-							We convert Ether into units (shares) of the fund and purchase equal amounts of ICO tokens and other stocks according to the fund allocation that makes up the fund.<br>
+							Investors deposits ETH into address <rb_g>0xA813e13d85D61c36D2fEc4621Ce85B5DDE9e83DF</rb_g> (minimum 1 ETH).<br>
+							We convert ETH into units (shares) of the fund and purchase equal amounts of ICO tokens and other stocks according to the fund allocation that makes up the fund.<br>
 							We create new ICOFund tokens according to your share in the fund and allocate them to your Ethereum address.</p>
 
 							<b_g>To sell ICOFund token units</b_g>
 							<p>
 							Send your ICOFund tokens back to <rb_g>0xA813e13d85D61c36D2fEc4621Ce85B5DDE9e83DF</rb_g>.<br>
-							We sell the corresponding amount of fund allocation tokens and stocks that make up the fund for Ether.<br>
-							We send your Ether back to your Ethereum address.</p>
+							We sell the corresponding amount of fund allocation tokens and stocks that make up the fund for ETH.<br>
+							We send your ETH back to your Ethereum address.</p>
 
 							<b_g>Principles</b_g>
 							<p>
